# cuadradito

./: .gitignore  Cargo.toml  LICENSE  README.md
base/: Cargo.toml
base/src/: context.rs  data.rs  lib.rs  market.rs  strategy.rs  time.rs
base/src/data/: layer.rs  view.rs
dummy/: Cargo.toml
dummy/src/: bin.rs  data.rs  execute.rs  lib.rs  market.rs  strategy.rs
parquet_driver/: Cargo.toml
parquet_driver/src/: lib.rs
